[tool.poetry]
name = "mahjong"
version = "0.1.0"
description = ""
authors = ["Nranphy <3102002900@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
loguru = "^0.6.0"
uvicorn = "^0.20.0"
email-validator = "^1.3.1"
pymysql = "^1.0.2"
cryptography = "^39.0.2"
websockets = "^11.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
